fixed bug in catalog.html filter overflow

--- a/assets/scss/catalog.scss
+++ b/assets/scss/catalog.scss
@@ -129,7 +129,7 @@
                         max-width: 220px;
 
                         @media (max-width: 1024px) {
-                            font-size: 20px;
+                            font-size: 18px;
 
                             @media (max-width: 414px) {
                                 font-size: 16px;
@@ -279,6 +279,12 @@
             flex-direction: column;
             align-items: center;
 
+            @media (max-width: 770px) {
+                flex-direction: row;
+                align-items: center;
+                justify-content: center;
+            }
+
             button,
             input {
                 background: none;
@@ -294,11 +300,17 @@
                 transition: 0.4s;
                 font-size: 25px;
 
-                @media (max-width: 414px) {
-                    font-size: 16px;
-                    width: 150px;
+                @media (max-width: 1024px) {
+                    font-size: 20px;
+                    width: 180px;
                     height: 50px;
-                    margin: 20px 0;
+
+                    @media (max-width: 414px) {
+                        font-size: 16px;
+                        width: 150px;
+                        height: 50px;
+                        margin: 20px 0;
+                    }
                 }
 
                 &:hover {
@@ -311,6 +323,11 @@
                 display: flex;
                 align-items: center;
                 margin-bottom: 35px;
+
+                @media (max-width: 770px) {
+                    margin-bottom: 0;
+                    margin-left: 40px;
+                }
 
                 &:hover {
                     img {
